--- a/index.html
+++ b/index.html
@@ -168,3 +168,7 @@
     </footer>
 </body>
 </html>
+
+
+<!-- link netlify : https://eedijunaedii.netlify.app/ -->
+<!-- link repository : https://github.com/eedijunaedii/tugas-akhir-prakerja-hacktiv8 -->
